pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/pr13577.rkt
#;
(exn-pred #rx"expected: Integer")

#lang typed/racket

(for/sum ([k (in-naturals)])
  (/ 1 (* k k)))

